# rimeka

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: app.rs  builtins.rs  fetcher.rs  glob.rs  installer.rs  main.rs  options.rs  package.rs  regex.rs  spec.rs
src/package/: builtins.rs  installer.rs  mod.rs  repo.rs  source.rs
